# routes/app.routes.js
@@ -1,5 +1,6 @@
 const categoryController = require("../controllers/categories.controller");
 const productController = require("../controllers/products.controller");
+const usersController = require("../controllers/users.controller");
 const express = require("express");
 const router = express.Router();
 
@@ -14,5 +15,8 @@ router.get("/product",productController.findAll);
 router.get("/product/:id",productController.findOne);
 router.put("/product/:id",productController.update);
 router.delete("/product/:id",productController.delete);
+
+router.post("/register",usersController.register);
+router.post("/login",usersController.login);   
 
 module.exports = router;
