# swagger.json
@@ -15,6 +15,10 @@
         {
             "name": "Category",
             "description": "Category API"
+        },
+        {
+            "name": "Users",
+            "description": "Users API"
         }
     ],
     "schemes": [
@@ -27,6 +31,62 @@
         "application/json"
     ],
     "paths": {
+        "/api/register":{
+            "post":{
+             "tags":["Users"],
+             "summary":"Register API",
+             "parameters":[
+                 {
+                     "name":"RegisterModel",
+                     "in":"body",
+                     "description":"User Registration",
+                     "required":true,
+                     "type":"object",
+                     "schema":{
+                         "$ref":"#/definitions/RegisterModel"
+                     }
+                 }
+             ],
+             "responses":{
+                 "200":{
+                     "description":"OK",
+                     "schema":{
+                         "$ref":"#/definitions/ServiceResponse"
+                     }
+                 }
+             }
+ 
+            } 
+         },
+        "/api/login":{
+           "post":{
+            "tags":["Users"],
+            "summary":"Login API",
+            "parameters":[
+                {
+                    "name":"LoginModel",
+                    "in":"body",
+                    "description":"User Login",
+                    "required":true,
+                    "type":"object",
+                    "schema":{
+                        "$ref":"#/definitions/LoginModel"
+                    }
+                }
+            ],
+            "responses":{
+                "200":{
+                    "description":"OK",
+                    "schema":{
+                        "$ref":"#/definitions/ServiceResponse"
+                    }
+                }
+            }
+
+           } 
+        },
+        
+        
         "/api/category": {
             "get": {
                 "tags": [
@@ -204,6 +264,42 @@
                     }
                 }
             }
+        },
+        "RegisterModel":{
+            "required":[
+                "fullName",
+                "email",
+                "password"
+            ],
+            "properties":{
+                "fullName":{
+                    "type":"string"
+                },
+                "email":{
+                    "type":"string"
+                },
+                "password":{
+                    "type":"string"
+                }
+            }
+        },
+
+        "LoginModel":{
+            "required":[
+                "email",
+                "password"
+            ],
+            "properties":{
+                "email":{
+                    "type":"string"
+                },
+                "password":{
+                    "type":"string"
+                }
+            }
         }
+        
+        
+
     }
 }
